--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                     <h1> MY PROJECTS</h1>
                     <div class="project" id="project">
                         <div class="boxs" id="html">
-                            <img src="image/about-pic-1.jpg" alt="">
+                            <img src="image/4.jpg" alt="">
                             <h2>HTML5 & CSS3</h2>
-                            <div class="box-btn"><a href="#"> VIEW </a></div>
+                            <div class="box-btn"><a href="https://fornt-end-site.github.io/project-website/"> VIEW </a></div>
                         </div>
                         <div class="boxs" id="bootstrap">
                             <img src="image/about-pic-2.jpg" alt="">
                             <h2>BOOTSTRAP</h2>
-                            <div class="box-btn"><a href="#"> VIEW </a></div>
+                            <div class="box-btn"><a href=" https://fornt-end-site.github.io/bootstrap-web/"> VIEW </a></div>
                         </div>
                         <div class="boxs" id="wordpress">
                             <img src="image/about-pic-1.jpg" alt="">
